@@ -1,4 +1,4 @@
-@comment $NetBSD: PLIST,v 1.26 2018/01/01 22:29:20 rillig Exp $
+@comment $NetBSD: PLIST,v 1.27 2018/01/20 17:20:15 tonio Exp $
 bin/weechat
 include/weechat/weechat-plugin.h
 lib/pkgconfig/weechat.pc
@@ -7,6 +7,7 @@ lib/weechat/plugins/buflist.so
 lib/weechat/plugins/charset.so
 lib/weechat/plugins/exec.so
 lib/weechat/plugins/fifo.so
+lib/weechat/plugins/fset.so
 lib/weechat/plugins/irc.so
 lib/weechat/plugins/logger.so
 ${PLIST.lua}lib/weechat/plugins/lua.so
